2010-09-20  Roland Levillain  <roland@lrde.epita.fr>

	* mln/canvas/all.hh: Sort #include directives.

2010-08-17  Roland Levillain  <roland@lrde.epita.fr>

	Aesthetic changes.

	* mln/morpho/tree/data.hh,
	* mln/registration/icp.hh,
	* mln/util/fibonacci_heap.hh:
	Wrap long lines, fix punctuation, etc.

2010-07-28  Roland Levillain  <roland@lrde.epita.fr>

	* mln/io/off/save.hh: Fix documentation.

2010-07-28  Roland Levillain  <roland@lrde.epita.fr>

	Enforce coding style w.r.t. function declarations.

	* mln/io/magick/load.hh: Here.

2010-04-20  Roland Levillain  <roland@lrde.epita.fr>

	Add Doxygen documentation to a test.

	* tests/topo/complex.cc: Here.

2010-04-20  Roland Levillain  <roland@lrde.epita.fr>

	Fix Doxygen comments.

	* mln/value/int_u.hh,
	* mln/value/rgb.hh:
	Here.

2010-05-11  Roland Levillain  <roland@lrde.epita.fr>

	Remove a useless comment line.

	* apps/Makefile.am: Here.

2010-05-11  Roland Levillain  <roland@lrde.epita.fr>

	Wrap long lines.

	* mln/data/fill.hh: Here.

2010-05-10  Roland Levillain  <roland@lrde.epita.fr>

	More conversions from C-style casts to C++-style casts.

	* mln/core/contract.hh: Here.

2010-02-08  Roland Levillain  <roland@lrde.epita.fr>

	Use Doxygen comments properly.

	* mln/value/rgb.hh: Here.

2010-02-08  Roland Levillain  <roland@lrde.epita.fr>

	Typos in comments.

	* mln/core/concept/function.hh: Here.

2009-09-24  Roland Levillain  <roland@lrde.epita.fr>

	Reformat a documentation header.

	* mln/morpho/watershed/flooding.hh: Here.

2009-09-04  Roland Levillain  <roland@lrde.epita.fr>

	Re-wrap a long line.

	* mln/labeling/flat_zones.hh: Here.

2009-06-17  Roland Levillain  <roland@lrde.epita.fr>

	Remove useless C casts.

	* mln/fun/v2v/rgb_to_hsl.hh: Here.

2013-07-29  Roland Levillain  <roland@lrde.epita.fr>

	Clean up Milena's tests/draw/line.cc.

	* tests/draw/line.cc: Remove a useless header inclusion.
	Add a description.
	Stylistic changes.

2013-07-25  Roland Levillain  <roland@lrde.epita.fr>